@@ -1,12 +1,21 @@
 OpenVPN
 Copyright (C) 2002-2004 James Yonan <jim@yonan.net>
 
-$Id: ChangeLog,v 1.95 2004/02/08 22:35:25 jimyonan Exp $
+$Id: ChangeLog,v 1.96 2004/02/14 01:08:15 jimyonan Exp $
 
 2004.02.xx -- Version 1.6-beta7
 	
 * Allow scheduling priority increase (--nice) together
   with UID/GID downgrade (--user/--group).
+* Code that causes SIGUSR1 restart on TLS errors in TCP
+  mode was not activated in pthread builds.
+* Save the certificate serial number in an environmental
+  variable called tls_serial_{n} prior to calling the
+  --tls-verify script.  n is the current cert chain level.
+* Added NetBSD IPv6 tunnel capability (also requires
+  a kernel patch) (Horst Laschinsky).
+* Fixed bug in checking the return value of the nice()
+  function (Ian Pilcher).
 
 2004.02.05 -- Version 1.6-beta6
 
